Changes in version 0.2.0.7-alpha - 2007-09-21
  o New directory authorities:
    - Set up moria1 and tor26 as the first v3 directory authorities. See
      doc/spec/dir-spec.txt for details on the new directory design.

  o Minor features (security):
    - As a client, do not believe any server that tells us that any address
      maps to an internal address space.
    - Make it possible to enable HashedControlPassword and
      CookieAuthentication at the same time.

  o Minor features (guard nodes):
    - Tag every guard node in our state file with the version that we believe
      added it, or with our own version if we add it.  This way, if a user
      temporarily runs an old version of Tor and then switches back to a new
      one, she doesn't automatically lose her guards.

  o Minor features (speed):
    - When implementing AES counter mode, update only the portions of the
      counter buffer that need to change, and don't keep separate
      network-order and host-order counters when they are the same (i.e., on
      big-endian hosts.)

  o Minor features (controller):
    - Accept LF instead of CRLF on controller, since some software has a
      hard time generating real Internet newlines.
    - Add GETINFO values for the server status events
      "REACHABILITY_SUCCEEDED" and "GOOD_SERVER_DESCRIPTOR". Patch from
      Robert Hogan.

  o Removed features:
     - Routers no longer include bandwidth-history lines in their
       descriptors; this information is already available in extra-info
       documents, and including it in router descriptors took up 60% (!) of
       compressed router descriptor downloads.  Completes implementation of
       proposal 104.
     - Remove the contrib scripts ExerciseServer.py, PathDemo.py,
       and TorControl.py, as they use the old v0 controller protocol,
       and are obsoleted by TorFlow anyway.
     - Drop support for v1 rendezvous descriptors, since we never used