@@ -3514,10 +3514,12 @@ int router_load_single_router(const char *s, uint8_t purpose,
 void router_load_routers_from_string(const char *s, const char *eos,
                                      saved_location_t saved_location,
                                      smartlist_t *requested_fingerprints,
+                                     int descriptor_digests,
                                      uint8_t purpose);
 void router_load_extrainfo_from_string(const char *s, const char *eos,
                                        saved_location_t saved_location,
-                                       smartlist_t *requested_fps);
+                                       smartlist_t *requested_fps,
+                                       int descriptor_digests);
 
 typedef enum {
   NS_FROM_CACHE, NS_FROM_DIR_BY_FP, NS_FROM_DIR_ALL, NS_GENERATED
